2008-09-14  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Make a "bare ero" error for unknown
	entities point the "&" character.

2008-09-14  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: It turns out that U+FFFD don't have to
	be added to the list of excluded characters.

2008-09-14  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src ($char_onerror): Have character decoder's |line|
	and |column| a higher priority than the one set by the
	tokenizer's input handler.
	($self->{read_until}): Exclude U+FFFD (but this might
	not be necessary, since now we do line/column fixup in
	the character decode handle).

2008-09-14  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Use |{read_until}| where possible.

2008-09-14  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Change |{getc_until}| to |{read_until}|
	and |manakai_getc_until| to |manakai_read_until| to
	reduce the number of string copies.

2008-09-14  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src (parse_char_string): Use newly created
	|Whatpm::Charset::DecodeHandle::CharString| instead of Perl's
	standard feature to |open| a string as a filehandle,
	since Perl's string filehandle seems not supporting |ungetc|
	method correctly.
	(parse_char_stream): Define |{getc_until}| method.
	(DATA_STATE): Experimental support for |getc_until| feature.

2008-09-13  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Check points added to newly added branches.

2008-09-13  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Remove |{char}|, which is no longer used.
	Remove |{entity_in_attr}| and |{last_attribute_value_state}|
	and replaced by |{prev_state}|.

	* mkhtmlparser.pl: Remove |{char}| feature.
	Remove |!!!back-next-input-character;| macro.

2008-09-13  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Finally we get rid of all the inner loops.  Remove
	entity related tokenizer states in favor of new states
	implementing the consume character reference algorithm.

2008-09-13  Wakaba  <wakaba@suika.fam.cx>
