@@ -1,7 +1,7 @@
 1..3105
 # Running under perl version 5.008007 for linux
-# Current time local: Sun Sep 14 12:47:46 2008
-# Current time GMT:   Sun Sep 14 03:47:46 2008
+# Current time local: Sun Sep 14 18:02:36 2008
+# Current time GMT:   Sun Sep 14 09:02:36 2008
 # Using Test.pm version 1.25
 # t/tokenizer-test-2.dat
 ok 1
@@ -1003,9 +1003,7 @@ ok 912
 ok 913
 ok 914
 ok 915
-not ok 916
-# Test 916 got: "3" (t/HTML-tree.t at line 174 fail #306)
-#     Expected: "1" (Parse error: qq'foo<col>'; 1:2:unmatched end tag, 1:3:unmatched end tag, 1:4:unmatched end tag;Line: 1 Col: 3 Unexpected end tag (colgroup). Ignored.)
+ok 916
 ok 917
 ok 918
 ok 919
